Get rid of calling python API for getting assigned sandboxes with training runs when getting all training instances.